add long_description to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [metadata]
 name = tsc-utils
 description = A set of utility scripts for working with TSC, the scripting language used in Cave Story.
+long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://github.com/cave-story-randomizer/tsc-utils
 author = duncathan salt
 
