--- a/setup.cfg
+++ b/setup.cfg
@@ -17,3 +17,6 @@ packages = find:
 include_package_data = True
 zip_safe = False
 python_requires = >=3.6
+
+install_requires =
+    typing_extensions
